# gait

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  GEMINI.md  QWEN.md  README.md
.github/workflows/: code-quality.yml  flow-CI.yml  gitai.yml  gitpilot.yml  release.yml  rust.yml
crates/flow/: BINARY_STRUCTURE.md  CHANGELOG.md  Cargo.toml  README.md
crates/flow/.github/workflows/: CI.yml
crates/flow/src/: cli.rs  commands.rs  lib.rs  llm.rs  main.rs
crates/flow/src/changes/: prompt.rs
crates/flow/src/commit/: cli.rs  mod.rs  prompt.rs  service.rs
crates/flow/src/git/: commit.rs
crates/flow/src/tui/: state.rs
crates/flow/tests/: basic_git_operations_tests.rs  branch_comparisons_tests.rs  changelog_integration_tests.rs  changelog_prompts_tests.rs  changelog_tests.rs  config_tests.rs  file_analyzers_tests.rs  file_exclusions_tests.rs  gitmoji_tests.rs  llm_tests.rs  mcp_tests.rs  pr_tests.rs  prompt_tests.rs  remote_git_repositories_tests.rs  remote_repository_integration_tests.rs  review_tests.rs  service_tests.rs  test_utils.rs  token_optimization_integration_tests.rs  token_optimizer_tests.rs
crates/git-flow/: Cargo.toml  README.md
crates/git-flow/src/: cli.rs  common.rs  emoji.rs  main.rs
crates/git-flow/src/changes/: releasenotes.rs
crates/git-flow/src/commit/: review.rs
crates/git-flow/src/git/: repository.rs
crates/git-flow/tests/: basic_git_operations_tests.rs  branch_comparisons_tests.rs  changelog_prompts_tests.rs  changelog_tests.rs  config_tests.rs  file_analyzers_tests.rs  file_exclusions_tests.rs  gitmoji_tests.rs  llm_tests.rs  mcp_tests.rs  pr_tests.rs  prompt_tests.rs  remote_git_repositories_tests.rs  review_tests.rs  service_tests.rs  test_utils.rs  token_optimization_integration_tests.rs  token_optimizer_tests.rs
crates/wire/: .gitignore  Cargo.toml  README.md
crates/wire/benches/: cache_benchmark.rs
crates/wire/src/: check.rs  common.rs  lib.rs  main.rs  models.rs  sync.rs
crates/wire/src/cache/: fetcher.rs  filter.rs  key_generator.rs  lock.rs  manager.rs  metadata.rs  mod.rs
crates/wire/src/common/: fetch.rs  parse.rs  sequence.rs
crates/wire/src/models/: cached_repo.rs  repo_config.rs  wire_operation.rs
crates/wire/tests/: test_cached_repo.rs  test_concurrent_access.rs  test_end_to_end.rs  test_repo_cache.rs  test_repo_config.rs  test_sync_performance.rs  test_wire_operation.rs
src/: app.rs  cli.rs  commands.rs  common.rs  config.rs  context.rs  lib.rs  logger.rs  main.rs  messages.rs  token_optimizer.rs  ui.rs
src/analyzer/: json.rs  mod.rs
src/changes/: cli.rs  prompt.rs
src/commit/: cli.rs  prompt.rs  review.rs  service.rs
src/core/: commit_cache.rs  context.rs  llm.rs  mod.rs  semantic_similarity.rs  template.rs  token_optimizer.rs
src/features/: rebase.rs
src/features/changelog/: change_analyzer.rs  change_log.rs  cli.rs  common.rs  mod.rs  models.rs  prompt.rs  readme_reader.rs
src/features/commit/: cli.rs  completion.rs  mod.rs  prompt.rs  relevance.rs  review.rs  service.rs  types.rs
src/features/rebase/: service.rs  types.rs
src/file_analyzers/: json.rs
src/git/: commit.rs  files.rs  ignore_matcher.rs  metadata.rs  mod.rs  repository.rs  utils.rs
src/mcp/: mod.rs  server.rs
src/mcp/tools/: changelog.rs  codereview.rs  commit.rs  mod.rs  pr.rs  releasenotes.rs  utils.rs
src/remote/: check.rs  sync.rs
src/remote/cache/: fetcher.rs  key_generator.rs  manager.rs  metadata.rs
src/remote/models/: repo_config.rs
src/server/: mod.rs  serve.rs
src/server/tools/: changelog.rs  codereview.rs  commit.rs  mod.rs  pr.rs  releasenotes.rs
src/tui/: app.rs  input_handler.rs  mod.rs  rebase.rs  spinner.rs  state.rs  theme.rs  ui.rs
src/wire/cache/: fetcher.rs  key_generator.rs  manager.rs  metadata.rs
src/wire/models/: repo_config.rs
templates/: commit_system.hbs  commit_user.hbs  pr_system.hbs  pr_user.hbs  review_system.hbs  review_user.hbs
tests/: basic_git_operations_tests.rs  branch_comparisons_tests.rs  changelog_integration_tests.rs  commit_prompts_tests.rs  completion_tests.rs  config_tests.rs  file_analyzers_tests.rs  file_exclusions_tests.rs  llm_tests.rs  mcp_tests.rs  rebase_integration_tests.rs  remote_repository_integration_tests.rs  review_tests.rs  service_tests.rs  test_cached_repo.rs  test_concurrent_access.rs  test_end_to_end.rs  test_repo_cache.rs  test_repo_config.rs  test_sync_performance.rs  test_utils.rs  test_wire_operation.rs  token_optimization_integration_tests.rs  token_optimizer_tests.rs
tests/features/: changelog_integration_tests.rs  changelog_tests.rs  pr_tests.rs
