[workspace]
resolver = "3"
members = [
    "crates/flow",
    "crates/wire"
]

[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 256
