[package]
name = "gwtwire"
description = "Wires part of other repository's source code into the repository in a declarative manner."
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[[bin]]
name = "git-wire"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
cause = "0.1.2"
temp-dir = "0.1.16"
fs_extra = "1.3.0"
folder_compare = "0.4.0"
regex = "1.11.2"
clap = { version = "4.5.47", features = ["derive"] }
colored = "3.0.0"
tokio = { version = "1.0", features = ["full"] }
crossbeam = "0.8"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tempfile = "3.0"
